Fixed width overflow problem in POI list.

--- a/app/app.css
+++ b/app/app.css
@@ -1,7 +1,12 @@
-body {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
-    margin: 0;
-    padding: 10px;
+}
+
+body {
+    margin: 10px;
+    padding: 0px;
     font-size: 18px;
     font-family: sans-serif;
 }
@@ -16,7 +21,7 @@ body > h1 {
 }
 
 #mapPanel {
-    flex: 0 0 70vw;
+    flex: 0 0 70%;
     display: flex;
     flex-direction: column;
 }
@@ -31,7 +36,7 @@ body > h1 {
 }
 
 #placesOfInterest {
-    flex: 0 0 auto;
+    flex: 0 0 calc(30% - 10px);
     display: flex;
     flex-direction: column;
     margin-left: 10px;
